OAKHILL/src/objects/Related_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Structure__c</fullName>
        <label>Account Structure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Quarterly_Return__c</fullName>
        <label>Active Quarterly Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Funded_Percent__c</fullName>
        <formula>Commitment_Funded__c/Commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commitment Funded (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commitment_Funded__c</fullName>
        <label>Commitment Funded</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment_Unfunded__c</fullName>
        <formula>Commitment__c  -  Commitment_Funded__c</formula>
        <label>Commitment Unfunded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <label>Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_NAV__c</fullName>
        <label>Current NAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <referenceTo>Legal_Entity__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Net_Return_APR__c</fullName>
        <label>Net Return % - APR</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_AUG__c</fullName>
        <label>Net Return % - AUG</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_DEC__c</fullName>
        <label>Net Return % - DEC</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_FEB__c</fullName>
        <label>Net Return % - FEB</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_JAN__c</fullName>
        <label>Net Return % - JAN</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_JUL__c</fullName>
        <label>Net Return % - JUL</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_JUN__c</fullName>
        <label>Net Return % - JUN</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_MAR__c</fullName>
        <label>Net Return % - MAR</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_MAY__c</fullName>
        <label>Net Return % - MAY</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_NOV__c</fullName>
        <label>Net Return % - NOV</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_OCT__c</fullName>
        <label>Net Return % - OCT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Return_SEP__c</fullName>
        <label>Net Return % - SEP</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Number__c</fullName>
        <label>Partner Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Investor_Contacts__c</fullName>
        <label>Primary Investor Contacts</label>
        <summaryFilterItems>
            <field>Investor_Contact__c.Primary_Investor_Contact__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Investor_Contact__c.Investment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Q1_Net_Return__c</fullName>
        <formula>IF(
Net_Return_MAR__c &lt;&gt; 0, Net_Return_MAR__c,
IF(
Net_Return_FEB__c &lt;&gt; 0,Net_Return_FEB__c,
IF(
Net_Return_JAN__c &lt;&gt; 0,Net_Return_JAN__c,0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 Net Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Net_Return__c</fullName>
        <formula>IF( 
Net_Return_JUN__c &lt;&gt; 0, Net_Return_JUN__c, 
IF( 
Net_Return_MAY__c &lt;&gt; 0,Net_Return_MAY__c, 
IF( 
Net_Return_APR__c &lt;&gt; 0,Net_Return_APR__c,0 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 Net Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Net_Return__c</fullName>
        <formula>IF( 
Net_Return_SEP__c &lt;&gt; 0, Net_Return_SEP__c, 
IF( 
Net_Return_AUG__c &lt;&gt; 0,Net_Return_AUG__c, 
IF( 
Net_Return_JUL__c &lt;&gt; 0,Net_Return_JUL__c,0 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3 Net Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RI_Investor_Rollup_Report__c</fullName>
        <formula>IF (AND( SMA__c = TRUE, RecordType.Name =&quot;Commitment&quot;),  Current_NAV__c +  Commitment_Unfunded__c , if( RecordType.Name =&quot;Nav&quot;, Current_NAV__c , if( RecordType.Name =&quot;Commitment&quot;,  Commitment__c , 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investor Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transactions_CapCall__c</fullName>
        <inlineHelpText>Number of CapCall Transactions</inlineHelpText>
        <label>Transactions-CapCall</label>
        <summaryFilterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Capital Call</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Related_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unfunded_NAV__c</fullName>
        <formula>Commitment_Unfunded__c  +  Current_NAV__c</formula>
        <label>Unfunded+NAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Gross_Return__c</fullName>
        <label>YTD Gross Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Net_Return__c</fullName>
        <label>YTD Net Return</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Related Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Related Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <recordTypes>
        <fullName>Commitment</fullName>
        <active>true</active>
        <label>Commitment</label>
    </recordTypes>
    <recordTypes>
        <fullName>NAV</fullName>
        <active>true</active>
        <label>NAV</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMA</fullName>
        <active>false</active>
        <label>SMA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Day</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
OR(
Fund__r.Name  = &quot;Oak Hill Credit Alpha Fund, L.P.&quot;,
Fund__r.Name = &quot;Oak Hill Credit Alpha Fund (Offshore), Ltd.&quot;,
Fund__r.Name = &quot;Oak Hill Credit Alpha Fund SF, L.P.&quot;,
Fund__r.Name = &quot;Oak Hill Credit Alpha Yen Feeder Fund&quot;,
Fund__r.Name = &quot;Oak Hill Credit Opportunities Fund, L.P.&quot;,
Fund__r.Name = &quot;Oak Hill Credit Opportunities Fund (Offshore), Ltd.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund, L.P.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (Offshore), Ltd.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (EURO Feeder), Ltd.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (GBP Feeder), Ltd.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (Yen Feeder), Ltd.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (AUD Feeder), Ltd.&quot;,
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (Parallel), L.P.&quot;),
((DAY(Close_Date__c) &lt;&gt; IF(Month(Close_Date__c)=12, 31, DAY(DATE(YEAR(Close_Date__c),MONTH(Close_Date__c)+1,1) 
- 1)))))</errorConditionFormula>
        <errorMessage>Date must be the last day of the month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_More_than_One_Primary_Contact</fullName>
        <active>true</active>
        <description>This rule exists to validate that only one primary investor contact is related to a related account</description>
        <errorConditionFormula>Primary_Investor_Contacts__c &gt; 1</errorConditionFormula>
        <errorMessage>No more than one Primary Contact can be indicated per Related Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Day</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
OR( 
Fund__r.Name = &quot;Oak Hill Credit Alpha Fund, L.P.&quot;, 
Fund__r.Name = &quot;Oak Hill Credit Alpha Fund (Offshore), Ltd.&quot;, 
Fund__r.Name = &quot;Oak Hill Credit Alpha Fund SF, L.P.&quot;, 
Fund__r.Name = &quot;Oak Hill Credit Alpha Yen Feeder Fund&quot;, 
Fund__r.Name = &quot;Oak Hill Credit Opportunities Fund, L.P.&quot;, 
Fund__r.Name = &quot;Oak Hill Credit Opportunities Fund (Offshore), Ltd.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund, L.P.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (Offshore), Ltd.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (EURO Feeder), Ltd.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (GBP Feeder), Ltd.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (Yen Feeder), Ltd.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (AUD Feeder), Ltd.&quot;, 
Fund__r.Name = &quot;OHA Diversified Credit Strategies Fund (Parallel), L.P.&quot;),  
(DAY( Open_Date__c ) &lt;&gt; 1))</errorConditionFormula>
        <errorMessage>Open day must be the first day of the month</errorMessage>
    </validationRules>
</CustomObject>